fix icon align

--- a/src/Resources/css/app.css
+++ b/src/Resources/css/app.css
@@ -33,7 +33,6 @@ a {
 
 .img_cover {
     background-size: contain !important;
-    overflow: hidden;
 }
 .container {
     width:1024px;
